<resources>
    <string name="app_name">News App 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="loading">Loading..</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="all_news">All news</string>
    <string name="favorite">Favorite</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="click_to_search">Click to search -></string>
    <string name="search_in">Search in:</string>
    <string name="sort_by">Sort by:</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="set_date">Set date period</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="quick_instruction">Additional search options:\n\"\" for exact match\n+ for words that should occur\n- for words that should not occur</string>
    <string name="unblock_source">%1$s unblocked</string>
    <string name="block_source">%1$s blocked</string>
    <string name="follow_source">%1$s followed</string>
    <string name="unfollow_source">%1$s unfollowed</string>
    <string name="likedArticle">Article added to favorite</string>
    <string name="unlikedArticle">Article removed from favorite</string>
    <string name="send">Send</string>
    <string name="end_of_list">End of list</string>
    <string name="favorite_list_empty">You have not yet liked any articles</string>
    <string name="themes">Themes</string>
    <string name="change_theme">Change theme</string>
    <string name="follows_source">Follows</string>
    <string name="config_follow_source">Setting up follows</string>
    <string name="config_block_source">Setting up blocks</string>
    <string name="blocks_source">Blacklist</string>
    <string name="delete">Delete</string>
    <string name="list_is_empty">List is empty</string>
    <string name="error_occurred">An error occurred: %1$s</string>
    <string name="date_text" translatable="false">%1$s - %2$s</string>
    <string name="version">version 1.3.22</string>
    <string name="api_source">News source</string>
    <string name="config_api_source">Selecting a news source</string>
    <string name="sources">Sources</string>
    <string name="freshness">Freshness:</string>
    <string name="safe_search">The safe search filter:</string>
    <string name="temp_not_work">Temporarily not working</string>
    <string name="newswire">Newswire:</string>
    <string name="category">Category:</string>
    <string name="no_internet">No Internet connection</string>
</resources>