<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Tint"
    tools:context=".ui.fragment.SettingsFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:elevation="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="5dp" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp"
        app:constraint_referenced_ids="setting_icon1, settings_title1,settings_description1,
        setting_icon2, settings_title2,settings_description2,
        setting_icon3, settings_title3,settings_description3,
        setting_icon4, settings_title4,settings_description4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/theme_card"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="3dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/setting_icon1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_color_lens_24"
        app:layout_constraintStart_toStartOf="@id/theme_card"
        app:layout_constraintTop_toTopOf="@id/theme_card" />

    <TextView
        android:id="@+id/settings_title1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/themes"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/setting_icon1"
        app:layout_constraintTop_toTopOf="@id/setting_icon1" />

    <TextView
        android:id="@+id/settings_description1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:text="@string/change_theme"
        app:layout_constraintStart_toEndOf="@id/setting_icon1"
        app:layout_constraintTop_toBottomOf="@id/settings_title1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/follow_source_card"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="3dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/theme_card" />

    <ImageView
        android:id="@+id/setting_icon2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_star_border_24"
        app:layout_constraintStart_toStartOf="@id/follow_source_card"
        app:layout_constraintTop_toTopOf="@id/follow_source_card" />

    <TextView
        android:id="@+id/settings_title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/follows_source"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/setting_icon2"
        app:layout_constraintTop_toTopOf="@id/setting_icon2" />

    <TextView
        android:id="@+id/settings_description2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:text="@string/config_follow_source"
        app:layout_constraintStart_toEndOf="@id/setting_icon2"
        app:layout_constraintTop_toBottomOf="@id/settings_title2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/block_source_card"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="3dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/follow_source_card" />

    <ImageView
        android:id="@+id/setting_icon3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_block_24"
        app:layout_constraintStart_toStartOf="@id/block_source_card"
        app:layout_constraintTop_toTopOf="@id/block_source_card" />

    <TextView
        android:id="@+id/settings_title3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/blocks_source"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/setting_icon3"
        app:layout_constraintTop_toTopOf="@id/setting_icon3" />

    <TextView
        android:id="@+id/settings_description3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:text="@string/config_block_source"
        app:layout_constraintStart_toEndOf="@id/setting_icon3"
        app:layout_constraintTop_toBottomOf="@id/settings_title3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/select_api_card"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginVertical="3dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/block_source_card" />

    <ImageView
        android:id="@+id/setting_icon4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_backup_table_24"
        app:layout_constraintStart_toStartOf="@id/select_api_card"
        app:layout_constraintTop_toTopOf="@id/select_api_card" />

    <TextView
        android:id="@+id/settings_title4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/api_source"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/setting_icon4"
        app:layout_constraintTop_toTopOf="@id/setting_icon4" />

    <TextView
        android:id="@+id/settings_description4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:text="@string/config_api_source"
        app:layout_constraintStart_toEndOf="@id/setting_icon4"
        app:layout_constraintTop_toBottomOf="@id/settings_title4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin" />


</androidx.constraintlayout.widget.ConstraintLayout>