<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegularNewsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="visible" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_to_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        android:theme="@style/FAB"
        android:visibility="gone"
        app:borderWidth="0dp"
        app:fabSize="normal"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/menuCard"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="190dp"
        android:translationX="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:theme="@style/Tint" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:elevation="10dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/for_close_menu"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight=".2" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:clickable="true"
            app:cardElevation="30dp">

            <LinearLayout
                android:id="@+id/filterLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language" />

                <Spinner
                    android:id="@+id/language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp" />

                <View
                    style="@style/BackgroundTextView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/click_to_search" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:imeOptions="actionSearch"
                        android:inputType="textNoSuggestions"
                        android:layoutDirection="rtl"
                        android:queryHint="Введите запрос для поиска"
                        app:iconifiedByDefault="true" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_in" />

                <Spinner
                    android:id="@+id/where_search_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp" />

                <View
                    style="@style/BackgroundTextView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by" />

                <Spinner
                    android:id="@+id/sort_by_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp" />

                <View
                    style="@style/BackgroundTextView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp" />


                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />


                <Button
                    android:id="@+id/date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/set_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/apply" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/reset" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/quick_instruction" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>